IFAWS-1573: Add preliminary Bamboo configuration
NOTE: Changes to match test instructions and scenario are db_iops=0 (GP3), disk_size=100, capacity_type=SPOT (cost)

--- a/.gitignore
+++ b/.gitignore
@@ -26,6 +26,7 @@ terraform-dc-*.log
 #
 *.tfvars
 !/config.tfvars
+!/bamboo.tfvars
 
 # Ignore override files as they are usually used to override resources locally and so
 # are not checked in
